# Rapha-l2

./: .gitignore  README.md  config.yaml  enable_ios.sh  main.py  pyproject.toml  setup.sh
config/: intents.yaml
core/: __init__.py  execution_engine.py  intent_parser.py  security_layer.py  task_orchestrator.py
data/: generate_embeddings.py
ios_integration/: __init__.py  ios_api_wrapper.py  ios_communication.py  ios_security.py  ios_setup_guide.md  ios_stubs.py  ios_sync.py
nexus_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: configure_phone.sh
tests/: test_intent_parser.py  test_ios_integration.py  test_security_layer.py  test_task_orchestrator.py
utils/: __init__.py  api_wrapper.py  encryption.py  logging_config.py  mobile_client.py
