[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-core"
version = "1.0.0"
description = "IA centrale orchestratrice multi-plateformes avec sécurité renforcée"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nexus Core Team", email = "nexus@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Automation",
]
dependencies = [
    "spacy>=3.5.0",
    "networkx>=3.0",
    "psutil>=5.9.0",
    "PyNaCl>=1.5.0",
    "structlog>=23.1.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "coverage>=7.0.0",
]
mobile = [
    "paramiko>=3.3.0",
    "asyncssh>=2.13.0",
]

[project.scripts]
nexus-core = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
